--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -259,3 +259,14 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     version = {2.69},
     urldate = {2025-12-07},
 }
+
+
+@misc{hopg_sketch,
+    author   = {DeepKling},
+    title    = {Graphit Gitter},
+    url      = {https://commons.wikimedia.org/wiki/File:GraphitGitter4.png},
+    note     = {This work is licensed under the Creative Commons 
+                Attribution-Share Alike 3.0 International License. 
+                To view a copy of this license, visit
+                \url{http://creativecommons.org/licenses/by-sa/3.0/}.}
+}  
