now with license

--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -17,7 +17,7 @@ Analog wird im Folgenden auch für die USB-Mikroskopaufnahmen der weiteren Probe
 Das Kalibrationsnetz besitzt ein Netz aus Divisionen der Größe $1~\unit{Inch}/100$ in vertikaler Richtung und $1~\text{Inch}/400$ in horizontaler Richtung, siehe Abbildung \ref{fig:netz_gold_scaled.pdf}. Aus der Entsprechung $1~\text{Inch}=\SI{25.4}{\milli\meter}$\cite[11]{usunits} ergibt sich als Unterteilung $\SI{254}{\micro\meter}\times \SI{63.5}{\micro\meter}$ (vertikale $\times$ horizontale Division).
 Die Aufnahmen für die erste Goldprobe sind in Abbildungen \ref{fig:netz_gold_scaled.pdf} und \ref{fig:gold_scaled.pdf} dargestellt.
 \jafps{gold_scaled.pdf}{USB-Mikroskopaufnahme der ersten Goldprobe. Maßstab mithilfe der Kalibrationsaufnahme \ref{fig:netz_gold_scaled.pdf} bestimmt.}{0.4}
-Auf Abbildung \ref{fig:gold_scaled.pdf} sind deutliche Oberflächenunreinheiten erkennbar, die RTM-Aufnahmen haben aber einen deutlich kleineren Bildausschnitt (quadratische Abmessung von $\SI{200}{\nano\meter}$), sodass nicht davon ausgegangen werden kann, dass die dort sichtbaren Strukturen diesen mit dem optischen Mikroskop sichtbaren Kratzern entsprechen. \todo{vergleich rtm vs optische korrosion}
+Auf Abbildung \ref{fig:gold_scaled.pdf} sind deutliche Oberflächenunreinheiten erkennbar, die RTM-Aufnahmen haben aber einen deutlich kleineren Bildausschnitt (quadratische Abmessung von $\SI{200}{\nano\meter}$), sodass nicht davon ausgegangen werden kann, dass die dort sichtbaren Strukturen diesen mit dem optischen Mikroskop sichtbaren Kratzern entsprechen.
 Die korrespondierenden Aufnahmen für die zweite Goldprobe sind in Abbildungen \ref{fig:netz_gold2_scaled.pdf} und \ref{fig:gold2_scaled.pdf} dargestellt.
 \jafps{gold2_scaled.pdf}{USB-Mikroskopaufnahme der zweiten Goldprobe, Maßstab mithilfe der Kalibrationsaufnahme \ref{fig:netz_gold2_scaled.pdf} bestimmt.}{0.4}
 
@@ -31,11 +31,11 @@ In den Abbildungen \ref{fig:res/gold_126_s4.pdf},\ref{fig:res/gold_127_s4_z.pdf}
 Zur besseren Übersichtlichkeit ist von der ersten Probe nur eins der Bilder hier dargestellt, die anderen beiden sind im Anhang (Abschnitt \ref{sec:anhanggoldrtm}) zu finden.
 Die Aufnahmen wurden wie oben erläutert alle im \textit{constant-current}-Modus aufgenommen.
 
-\jafps{res/gold_129_s4.pdf}{RTM-Aufnahme (Bildgröße: $\SI{200}{\nano\meter}$, z-Darstellung) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{250,3}{\nano\meter\per\s}$.}{0.45}
+\jafps{res/gold_129_s4.pdf}{RTM-Aufnahme (Bildgröße: $\SI{200}{\nano\meter}$, z-Darstellung) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, Rastergeschwindigkeit $v_R=\SI{250,3}{\nano\meter\per\s}$.}{0.45}
 
 \jafps{res/gold2_130_s4.pdf}{RTM-Aufnahme ($\SI{200}{\nano\meter}$, z-Darstellung) von Goldprobe 2 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{200,2}{\nano\meter\per\s}$.}{0.4}
 
-Die Aufnahmen der Goldproben weisen wie erwartet eine raue Struktur auf. Es sind auf den Aufnahmen der ersten Probe wolkenförmige, nicht ganz runde Strukturen mit für sich jeweils recht ebener Oberfläche zu erkennen. Es ist hier immer das Höhenbild, also die Abbildung der z-Position der Mikroskopspitze zur Beibehaltung eines Tunnelstroms gleich dem Referenzwert $I_\text{Setpoint}$, abgebildet, die Farbskala der Aufnahmen entspricht dabei bei dunklerer Farbe einem kleineren z-Abstand der Spitze von der Probenoberfläche am jeweiligen Pixel-Ort. Auf den Aufnahme der ersten Probe sind kleine, dunklere Bereiche zu erkennen, bei denen die Austrittsarbeit niedriger war als bei den helleren Bereichen (welche vermutlich ungefähr den Goldkügelchen auf der Probenoberfläche entsprechen) oder die Probenoberfläche physisch tiefer war als bei den helleren (Gold-)Gebieten. Es kann auch eine Kombination der beiden Faktoren vorhanden sein. Die dunkleren Flecken entsprechen also wahrscheinlich den freien Räumen zwischen den aufgedampften Goldkügelchen. Es gibt auch noch kleinere Bereiche mit helleren (höheren) Flecken, dies könnte entweder von kleineren Goldflocken oder (ggf. durch das Erhitzen hervorgerufenen) Stufen (siehe Abschnitt \ref{sec:theoriegold) stammen. Messungenauigkeiten durch eine nicht-ideale, d.h. nicht einatomige, Spitze sind allerdings hier auch denkbar als Ursache. Auch die auf den USB-Mikroskopaufnahmen optisch sichtbaren Kratzer in der Probenoberfläche sowie mögliche weitere kleinere Kratzer, die dieses Mikroskop nicht mehr auflösen kann, sind als Ursache für die flockenartigen Bereiche möglich.
+Die Aufnahmen der Goldproben weisen wie erwartet eine raue Struktur auf. Es sind auf den Aufnahmen der ersten Probe wolkenförmige, nicht ganz runde Strukturen mit für sich jeweils recht ebener Oberfläche zu erkennen. Es ist hier immer das Höhenbild, also die Abbildung der z-Position der Mikroskopspitze zur Beibehaltung eines Tunnelstroms gleich dem Referenzwert $I_\text{Setpoint}$, abgebildet, die Farbskala der Aufnahmen entspricht dabei bei dunklerer Farbe einem kleineren z-Abstand der Spitze von der Probenoberfläche am jeweiligen Pixel-Ort. Auf den Aufnahme der ersten Probe sind kleine, dunklere Bereiche zu erkennen, bei denen die Austrittsarbeit niedriger war als bei den helleren Bereichen (welche vermutlich ungefähr den Goldkügelchen auf der Probenoberfläche entsprechen) oder die Probenoberfläche physisch tiefer war als bei den helleren (Gold-)Gebieten. Es kann auch eine Kombination der beiden Faktoren vorhanden sein. Die dunkleren Flecken entsprechen also wahrscheinlich den freien Räumen zwischen den aufgedampften Goldkügelchen. Es gibt auch noch kleinere Bereiche mit helleren (höheren) Flecken, dies könnte entweder von kleineren Goldflocken oder (ggf. durch das Erhitzen hervorgerufenen) Stufen (siehe Abschnitt \ref{sec:theoriegold} stammen. Messungenauigkeiten durch eine nicht-ideale, d.h. nicht einatomige, Spitze sind allerdings hier auch denkbar als Ursache. Auch die auf den USB-Mikroskopaufnahmen optisch sichtbaren Kratzer in der Probenoberfläche sowie mögliche weitere kleinere Kratzer, die dieses Mikroskop nicht mehr auflösen kann, sind als Ursache für die flockenartigen Bereiche möglich.
 Insgesamt ist auf den Aufnahmen der ersten Goldprobe eine Struktur zu erkennen, die darauf hinweist, dass die Probe aus Gold und Saphir bestand. Vergleiche hierzu auch die Referenzaufnahme zu Gold auf Saphir in \cite[13]{Versuchsanleitung422}, die eine ähnliche Struktur aufweist.
 
 Die Aufnahme der zweiten Probe weist auffallend im unteren Bildteil eine Stufe auf. Da die Aufnahme immer von unten nach oben linienweise stattfindet, ist hier davon auszugehen, dass sich in diesem Bereich der Regelkreis und die Piezoelemente noch nicht der Struktur der Probe angepasst haben, insbesondere, da Piezokristalle eine Hysterese aufweisen
