--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -1,5 +1,7 @@
 \chapter{\moszwei}
-Zuletzt wird noch eine \moszwei Probe untersucht. Molybdän-Sulfid (\moszwei) ist eine Kristallstruktur aus Molybdän und Schwefel, welche ähnlich wie HOPG eine schichtartige Struktur, bei welcher die einzelnen Schichten nur durch Van-der-Vaals Kräfte zusammengehalten werden. Die Kristallstruktur einer Schicht ist in der Regel hexagonal. Hierbei sind an der Oberfläche Schwefelatome welche gleichseitige Dreiecke mit einem Abstand von $d = \SI{0.31604}{nm}$ die dominant messbare Struktur\cite{mos2structure}.
+Zuletzt wird noch eine \moszwei Probe untersucht. Molybdän-Sulfid (\moszwei) ist eine Kristallstruktur aus Molybdän- und Schwefelatomen, welche ähnlich wie HOPG eine schichtartige Struktur aufweist, bei welcher die einzelnen Schichten nur durch Van-der-Vaals Kräfte zusammengehalten werden. Die Kristallstruktur innerhalb einer Schicht ist in der Regel hexagonal. Hierbei sind an der Oberfläche Schwefelatome, welche gleichseitige Dreiecke mit einem Abstand der benachbarten Atome von $d = \SI{0.31604}{nm}$ bilden, die dominant messbare Struktur \cite{mos2structure}. Die Struktur ist in Abbildung \ref{fig:mos2_crystal.pdf} dargestellt.
+
+\jafps{mos2_crystal.pdf}{Darstellung der Kristallstruktur einer Schicht \moszwei. Abbildung modifiziert aus \cite{mos2fig}}{0.4}
 
 \section{Durchführung}
 Das Messverfahren ist grundsätzlich gleich dem in Abschnitt \ref{sec:hopg_messung} beschriebenen. Zunächst wird die Probe mit einem Tesastreifen präperiert um eine saubere und intakte Fläche zum Messen zu haben. Dann wird ein übersichtsbild im CCM erstellt und eine ausreichend glatte Stelle gesucht. Ein geeigneter Ausschnitt wird gewählt und das Prozedere wiederholt bis ein glatter Ausschnitt mit wenigen Nanometern Kantenlänge gefunden ist. Aufnahmen von den Annäherungsschritten sind im Anhang zu finden \todo{refrence}.
@@ -11,43 +13,43 @@ Die Abstände wurde für jeweils drei Atome gemessen, so dass die Unsicherheit i
 \jafps{res/mos2_lattice_197}{Ausschnitt von Abbildung \ref{fig:res/mos2_197}, mit eingezeichnetem Gitter}{0.4}
 
 \begin{table}[H]
-\centering
-\begin{tabular}{|c|c|c|}
-\hline
-Index & $\varphi / \unit{\degree}$ & $L / \unit{\nano\meter}$\\
-\hline
-1 & $ \num{61(2)}$ & $ \num{0.85(3)} $ \\
-2 & $ \num{63(2)}$ & $ \num{0.85(3)} $ \\
-3 & $ \num{61(2)}$ & $ \num{0.83(3)} $ \\
-4 & $ \num{61(2)}$ & $ \num{0.85(3)} $ \\
-\hline
-5 & $ \num{135(2)}$ & $ \num{0.89(3)} $ \\
-6 & $ \num{137(2)}$ & $ \num{0.89(3)} $ \\
-7 & $ \num{-45(2)}$ & $ \num{0.90(3)} $ \\
-\hline
-8 & $ \num{-173(2)}$ & $ \num{0.98(3)} $ \\
-9 & $ \num{7(2)}$ & $\num{0.96(3)}$ \\
-10 & $ \num{5(2)}$ & $ \num{0.93(3)}$ \\
-\hline
-\end{tabular}
-\caption{Längen und Winkel der in Abbildung \ref{fig:res/mos2_lattice_197} eingezeichneten Linien. Die Unsicherheit ergibt sich aus der Ableseungenauigkeit beim suchen der Grenzen der einzelnen Atome. Die Linien wurden zum besseren Mitteln jeweils über den dreifachen Atomabstand gezogen.}
-\label{tab:mos_lattice}
+	\centering
+	\begin{tabular}{|c|c|c|}
+		\hline
+		Index & $\varphi / \unit{\degree}$ & $L / \unit{\nano\meter}$ \\
+		\hline
+		1     & $ \num{61(2)}$             & $ \num{0.85(3)} $        \\
+		2     & $ \num{63(2)}$             & $ \num{0.85(3)} $        \\
+		3     & $ \num{61(2)}$             & $ \num{0.83(3)} $        \\
+		4     & $ \num{61(2)}$             & $ \num{0.85(3)} $        \\
+		\hline
+		5     & $ \num{135(2)}$            & $ \num{0.89(3)} $        \\
+		6     & $ \num{137(2)}$            & $ \num{0.89(3)} $        \\
+		7     & $ \num{-45(2)}$            & $ \num{0.90(3)} $        \\
+		\hline
+		8     & $ \num{-173(2)}$           & $ \num{0.98(3)} $        \\
+		9     & $ \num{7(2)}$              & $\num{0.96(3)}$          \\
+		10    & $ \num{5(2)}$              & $ \num{0.93(3)}$         \\
+		\hline
+	\end{tabular}
+	\caption{Längen und Winkel der in Abbildung \ref{fig:res/mos2_lattice_197} eingezeichneten Linien. Die Unsicherheit ergibt sich aus der Ableseungenauigkeit beim suchen der Grenzen der einzelnen Atome. Die Linien wurden zum besseren Mitteln jeweils über den dreifachen Atomabstand gezogen.}
+	\label{tab:mos_lattice}
 \end{table}
 
 
 \begin{table}[H]
-\centering
-\begin{tabular}{|c|c|c|c|}
-\hline
-Richtung & Index & $\varphi / \unit{\degree}$ & $L / \unit{\nano\meter}$\\
-\hline
-A & $1 - 4$ & $\num{62(1)}$ & $\num{0.28(1)}$ \\
-B & $5 - 7$ & $\num{136(1)}$ & $\num{0.30(1)}$ \\
-C & $8-10$ & $\num{6(1)}$ & $\num{0.32(1)}$ \\
-\hline
-\end{tabular}
-\caption{Mittelwerte der Daten aus Tabelle \ref{tab:mos_lattice}.}
-\label{tab:mos_lattice_avg}
+	\centering
+	\begin{tabular}{|c|c|c|c|}
+		\hline
+		Richtung & Index   & $\varphi / \unit{\degree}$ & $L / \unit{\nano\meter}$ \\
+		\hline
+		A        & $1 - 4$ & $\num{62(1)}$              & $\num{0.28(1)}$          \\
+		B        & $5 - 7$ & $\num{136(1)}$             & $\num{0.30(1)}$          \\
+		C        & $8-10$  & $\num{6(1)}$               & $\num{0.32(1)}$          \\
+		\hline
+	\end{tabular}
+	\caption{Mittelwerte der Daten aus Tabelle \ref{tab:mos_lattice}.}
+	\label{tab:mos_lattice_avg}
 \end{table}
 
 Die so bestimmten Gitterabstände aus Tabelle \ref{tab:mos_lattice_avg} liegen jeweils innerhalb weniger Prozent von dem erwarteten Wert von $d = \SI{0.31604}{\nano\meter}$. Da der Gitterabstand in alle Raumrichtungen gleich groß ist, ist es Sinnvoll den Mittelwert der drei Richtungen zu betrachten. Hierbei ergibt sich ein Wert von $\bar{L} = \SI{0.30(1)}{\nano\meter}$, was innerhalb einer $1-\sigma$ Umgebung des Erwartungswerts liegt.
