--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -248,7 +248,7 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
   month = {Apr},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.35.6195},
-  url = {https://link.aps.org/doi/10.1103/PhysRevB.35.6195}
+  doiurl = {https://doi.org/10.1103/PhysRevB.35.6195}
 }
 
 @article{crystalworkfuncs,
@@ -280,4 +280,12 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     note = {Open Source Software},
     version = {2.69},
     urldate = {2025-12-07},
+}
+
+@Misc{mos2fig,
+    author   = {Jozef Sivek},
+    title    = {Balls and sticks model of a single layer 1H and 1T molybdenum disulfide},
+    year     = {2015},
+    url      = {https://commons.wikimedia.org/wiki/File:Balls_and_sticks_model_of_a_single_layer_1H_and_1T_molybdenum_disulfide.svg},
+    note     = {This file is licensed under the Creative Commons Attribution-Share Alike 4.0 International license: \url{https://creativecommons.org/licenses/by-sa/4.0/}.}
 }
