--- a/422-raster-tunnel-mikroskopie/latex/anhang.tex
+++ b/422-raster-tunnel-mikroskopie/latex/anhang.tex
@@ -14,3 +14,8 @@
 \jafps{res/gold_126_s4.pdf}{RTM-Aufnahme ($\SI{200}{\nano\meter}$, z-Darstellung) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{200,2}{\nano\meter\per\s}$.}{0.45}
 
 \jafps{res/gold_127_s4_z.pdf}{RTM-Aufnahme ($\SI{200}{\nano\meter}$, z-Darstellung) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{200,2}{\nano\meter\per\s}$.}{0.45}
+
+
+\section{RTM-Aufnahmen der HOPG Probe}
+
+\jafps{res/hopg_165}{$v_R = \SI{157.19}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{751}{\nano\ampere}$, $P=0$, $I=4$}{0.4}
