--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -4,13 +4,13 @@ Zuletzt wird noch eine \moszwei Probe untersucht. Molybdän-Sulfid (\moszwei) is
 \jafps{mos2_crystal.pdf}{Darstellung der Kristallstruktur einer Schicht \moszwei. Abbildung modifiziert aus \cite{mos2fig}}{0.4}
 
 \section{Durchführung}
-Das Messverfahren ist grundsätzlich gleich dem in Abschnitt \ref{sec:hopg_messung} beschriebenen. Zunächst wird die Probe mit einem Tesastreifen präperiert um eine saubere und intakte Fläche zum Messen zu haben. Dann wird ein übersichtsbild im CCM erstellt und eine ausreichend glatte Stelle gesucht. Ein geeigneter Ausschnitt wird gewählt und das Prozedere wiederholt bis ein glatter Ausschnitt mit wenigen Nanometern Kantenlänge gefunden ist. Aufnahmen von den Annäherungsschritten sind im Anhang zu finden \todo{refrence}.
-Es werden Messungen eines kleinen, ebenen Bereichs im CHM angefertigt, zu sehen in Abbildung \ref{fig:res/mos2_197}. In diese Messung werden nun mit Gwyddion \cite{gwyddion} Gitterabstände eingezeichnet und vermessen. Diese Messung sind in Abbildung \ref{fig:res/mos2_lattice_197} und Tabelle \ref{tab:mos_lattice} zu finden.
+Das Messverfahren ist grundsätzlich gleich dem in Abschnitt \ref{sec:hopg_messung} beschriebenen. Zunächst wird die Probe mit einem Tesastreifen präperiert (also die oberste Schicht abgezogen) um eine saubere, möglichst glatte und intakte Fläche zum messen zu haben. Dann wird ein großes Übersichtsbild im CCM erstellt und eine ausreichend glatte, kleinere Stelle gesucht. Ein geeigneter kleinerer Ausschnitt wird gewählt und das Prozedere wiederholt bis ein glatter Ausschnitt mit wenigen Nanometern Kantenlänge gefunden ist. Aufnahmen von den Annäherungsschritten sind im Anhang zu finden \todo{refrence}.
+Es werden Messungen eines kleinen, ebenen Bereichs im CHM angefertigt, zu sehen in Abbildung \ref{fig:res/mos2_197}. In diese Messung werden nun mit gwyddion \cite{gwyddion} Gitterabstände eingezeichnet und vermessen. Diese Messungen der Abstände sind in der Abbildung \ref{fig:res/mos2_lattice_197} und in Tabelle \ref{tab:mos_lattice} dargestellt.
 
-Die Abstände wurde für jeweils drei Atome gemessen, so dass die Unsicherheit insgesamt kleiner wird. Die drei Richtungen werden wieder seperat behandelt. Man findet dann die mittleren Abstände und Winkel, aufgelistet in Tabelle \ref{tab:mos_lattice_avg}.
+Die Abstände wurde für jeweils drei Atome gemessen, sodass die Unsicherheit insgesamt kleiner wird. Die drei Richtungen werden wieder seperat behandelt. Man berechnet dann die mittleren Abstände und Winkel, aufgelistet in Tabelle \ref{tab:mos_lattice_avg}.
 
 \jafps{res/mos2_197}{\todo{caption}}{0.4}
-\jafps{res/mos2_lattice_197}{Ausschnitt von Abbildung \ref{fig:res/mos2_197}, mit eingezeichnetem Gitter}{0.4}
+\jafps{res/mos2_lattice_197}{Ausschnitt von Abbildung \ref{fig:res/mos2_197}, mit eingezeichnetem Gitter.}{0.4}
 
 \begin{table}[H]
 	\centering
@@ -32,7 +32,7 @@ Die Abstände wurde für jeweils drei Atome gemessen, so dass die Unsicherheit i
 		10    & $ \num{5(2)}$              & $ \num{0.93(3)}$         \\
 		\hline
 	\end{tabular}
-	\caption{Längen und Winkel der in Abbildung \ref{fig:res/mos2_lattice_197} eingezeichneten Linien. Die Unsicherheit ergibt sich aus der Ableseungenauigkeit beim suchen der Grenzen der einzelnen Atome. Die Linien wurden zum besseren Mitteln jeweils über den dreifachen Atomabstand gezogen.}
+	\caption{Längen L und Winkel $\varphi $der in Abbildung \ref{fig:res/mos2_lattice_197} eingezeichneten Linien. Die Unsicherheit ergibt sich aus der Ableseungenauigkeit beim visuellen Suchen der Grenzen der einzelnen Atome. Die Linien wurden zum besseren Mitteln jeweils über den dreifachen Atomabstand gezogen.}
 	\label{tab:mos_lattice}
 \end{table}
 
@@ -52,7 +52,7 @@ Die Abstände wurde für jeweils drei Atome gemessen, so dass die Unsicherheit i
 	\label{tab:mos_lattice_avg}
 \end{table}
 
-Die so bestimmten Gitterabstände aus Tabelle \ref{tab:mos_lattice_avg} liegen jeweils innerhalb weniger Prozent von dem erwarteten Wert von $d = \SI{0.31604}{\nano\meter}$. Da der Gitterabstand in alle Raumrichtungen gleich groß ist, ist es Sinnvoll den Mittelwert der drei Richtungen zu betrachten. Hierbei ergibt sich ein Wert von $\bar{L} = \SI{0.30(1)}{\nano\meter}$, was innerhalb einer $1-\sigma$ Umgebung des Erwartungswerts liegt.
-Man findet weiterhin die Winkel zwischen den Gruppen als $\Delta\varphi_{A, B} = |\varphi_A - \varphi_B| = \SI{74(1)}{\degree}$, $\Delta\varphi_{A, C} = \SI{56(1)}{\degree}$ und $\Delta\varphi_{B, C} = \SI{50(1)}{\degree}$. Hier ist eine deutlich Abweichung von den Erwarteten $\Delta\varphi_x = \SI{60}{\degree}$ festzustellen. Es fällt weiterhin auf, dass die Länge in Richtung A (vgl. Tabelle \ref{tab:mos_lattice_avg}) kleiner als der Erwartungswert, die in Richtung C größer (wenngleich noch in einer $1-\sigma$ Umgebung zum Erwartungswert) sind. Auch ist in den unkorrigierten Messdaten \todo{referenzieren} eine insgesamte Schieflage zu erkennen. Dies passt insofern gut zusammen, da eine Aufnahme, nicht aus der Flächennormalen die Winkel und Längen verzerrt. Im Fall der Gitterabstände ist dies hier nicht Tragisch, da die Änderung zum einen klein ist, zum anderen die A Richtung gestaucht und die C Richtung gestreckt wird, was im Mittel wieder ein gutes Ergebnis liefert.
+Die so bestimmten Gitterabstände aus Tabelle \ref{tab:mos_lattice_avg} weichen jeweils geringfügig vom erwarteten Wert $d = \SI{0.31604}{\nano\meter}$ ab. Da der Gitterabstand der Kristallstruktur von \moszwei in alle Raumrichtungen gleich groß ist, ist es zudem noch sinnvoll den Mittelwert der drei Richtungen zu betrachten. Hierbei ergibt sich dann ein Wert von $\bar{L} = \SI{0.30(1)}{\nano\meter}$, was innerhalb einer $1\sigma$ Umgebung des Erwartungswerts liegt.
+Man findet weiterhin die Winkel zwischen den Gruppen A, B und C als $\Delta\varphi_{A, B} = |\varphi_A - \varphi_B| = \SI{74(1)}{\degree}$, $\Delta\varphi_{A, C} = \SI{56(1)}{\degree}$ und $\Delta\varphi_{B, C} = \SI{50(1)}{\degree}$. Hier ist eine deutliche Abweichung von dem erwarteten $\Delta\varphi_x = \SI{60}{\degree}$ (für ein gleichseitiges Dreieck) festzustellen. Es fällt weiterhin auf, dass die Länge in Richtung A (vgl. Tabelle \ref{tab:mos_lattice_avg}) kleiner als der Erwartungswert, die in Richtung C größer (wenngleich noch in einer $1\sigma$ Umgebung zum Erwartungswert) sind. Auch ist in den unkorrigierten Messdaten \todo{referenzieren} eine insgesamte Schieflage zu erkennen. Dies passt insofern gut zusammen, da eine Aufnahme, nicht aus der Flächennormalen die Winkel und Längen verzerrt. Im Fall der Gitterabstände hat dies hier keine wichtige Auswirkung, da die Änderung zum einen klein ist, zum anderen die A Richtung gestaucht und die C Richtung gestreckt wird, was im Mittel wieder ein gutes Ergebnis liefert.
 
-Qualitativ ist an den Atomaren aufnahmen von \moszwei noch anzumerken, dass die Atome eine relativ große Ausdehnung haben, was das exakte vermessen der Gitterstruktur erschwert. Hierbei mag es Sinnvoll sein mit geringerem Abstand Messungen durchzuführen (Setpoint des Stroms größer und/oder Tunnelspannung kleiner) um so die lokalisation der Gitteratome genauer zu ermöglichen.
+Qualitativ ist für die atomaren Aufnahmen von \moszwei noch anzumerken, dass die Atome eine relativ große Ausdehnung haben, was das exakte Vermessen der Gitterstruktur erschwert. Hierbei mag es sinnvoll, sein mit geringerem Abstand der Spitze zur Probe Messungen durchzuführen (Setpoint des Stroms größer und/oder Tunnelspannung kleiner setzen) um so die Lokalisation der Gitteratome genauer zu ermöglichen. Im Versuch wurde dies aufgrund der zeitlichen Einschränkung nicht mehr durchgeführt; auch die vorhandenen Ergebnisse sind allerdings schon eine relativ gute Annäherung an die Literaturwerte und zeigen das gute Auflösungsvermögen des RTMs selbst bei diesem größeren Spitzenabstand.
