--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -15,8 +15,8 @@ Die HOPG Probe wird zunächst unter dem USB Mikroskop dokumentiert (siehe Abbild
 
 \jafps{hopg_scaled}{USB-Mikroskop Aufnahme der genutzten HOPG Probe.}{0.4}
 
-Anschließend wird die Probe vorbereitet inmdem ein Stück Tesa Film auf die Probe geklebt und dann abgezogen wurde. Dies sorgt dafür, dass eine frische, unverschmutzte und näherungsweise ebene Graphitschicht freigelegt wird.
-Es wird zunächst im CCM ein $\SI{200}{\nano\meter} \times \SI{200}{\nano\meter}$ STM Bild \ref{fig:res/hopg_131} aufgenommen und eine geeignete flache Stelle gesucht.
+Anschließend wird die Probe vorbereitet inmdem ein Stück Klebeband-Film auf die Probe geklebt und dann abgezogen wurde. Dies sorgt dafür, dass eine frische, unverschmutzte und näherungsweise ebene Graphitschicht freigelegt wird.
+Es wird zunächst im CCM ein $\SI{200}{\nano\meter} \times \SI{200}{\nano\meter}$ RTM-Bild \ref{fig:res/hopg_131} aufgenommen und eine geeignete flache Stelle gesucht.
 \jafps{res/hopg_131}{Übersichtsaufnahme der Graphitoberfläche im konstanten Strom Modus $v_R = \SI{1000.0}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
 
 
@@ -55,5 +55,5 @@ Zum besseren Mitteln wurde jeweils der Abstand von fünf Maxima bestimmt. Außer
 \end{table}
 
 Die Werte in Tabelle \ref{tab:hopg_measure} lassen sich in zwei Gruppen aufspalten, die den zwei Richtungen entsprechen, in denen die Kohlenstoffatome in Reihen liegen. Für jede Richtung wird jetzt der Mittelwert des Abstands zwischen je zwei Maxima berechnet, die Unsicherheit wird mittels Gaußscher Fehlerfortpflanzung berechnet\cite[8-9]{gerthsen}. Es ergibt sich für die erste Richtung (repräsentiert durch die Linien 1, 2, 6) ein mittlerer Winkel von $\varphi_1 = \SI{161(1)}{\degree}$ und ein Abstand von $L_1 = \SI{0.251(4)}{\nano\meter}$. Die selben Berechnungen für die zweite Gruppe (aus Linie 3, 4 und 5) ergeben $\varphi_2 = \SI{40(1)}{\degree}$ und $L_2 = \SI{0.254(4)}{\pico\meter}$.
-Die Gitterabstände $L_1$ und $L_2$ sind zueinander konsisten und liegen innerhalb einer Standardabweichung zueinander. Der Erwartete Gitterabstand $d=\SI{0.246}{\nano\meter}$ liegt in einer $2-\sigma$-Umgebung zu dem Messwert. Der Winkelunterschied beträgt $\Delta\varphi = \SI{121(1)}{\degree}$, was dem erwarteten Außenwinkel eines gleichseitigen Dreiecks ($\SI{120}{\degree}$) gut entspricht. Somit konnte sowohl die Winkel als auch Abstände des HOPG Kristallgitters gemessen werden, wenngleich bei den Gitterabständen nur eine übereinstimmung innerhalb einer $2\sigma$-Umgebung zu vorliegt.
+Die Gitterabstände $L_1$ und $L_2$ sind zueinander konsisten und liegen innerhalb einer Standardabweichung zueinander. Der Erwartete Gitterabstand $d=\SI{0.246}{\nano\meter}$ liegt in einer $2\sigma$-Umgebung zu dem Messwert. Der Winkelunterschied beträgt $\Delta\varphi = \SI{121(1)}{\degree}$, was dem erwarteten Außenwinkel eines gleichseitigen Dreiecks ($\SI{120}{\degree}$) gut entspricht. Somit konnte sowohl die Winkel als auch Abstände des HOPG Kristallgitters gemessen werden, wenngleich bei den Gitterabständen nur eine übereinstimmung innerhalb einer $2\sigma$-Umgebung zu vorliegt.
 Visuell ließ sich die elektronische Struktur von HOPG gut darstellen. Insgesamt lässt dies auf ein recht gut kalibriertes RTM schließen. Die leichten Abweichungen bei den gemessenen Längen lassen sich nicht eindeutig zuordnen, vorstellbar sind aber Hystereseeffekte der Piezoelemente oder Temperaturunterschiede zur Temperatur bei der Kalibration und dadurch veränderte elektrische oder mechanische Eigenschaften des Regelkreises oder der Piezoelemente.
