--- a/422-raster-tunnel-mikroskopie/latex/template.tex
+++ b/422-raster-tunnel-mikroskopie/latex/template.tex
@@ -87,6 +87,18 @@
 	\end{figure}
 }
 
+\def\jafpsh#1#2#3{
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=#3\textwidth]{#1}
+		%\includegraphics[height=0.4\textheight]{#1}
+		\captionof{figure}{#2}
+		\label{fig:#1}
+	\end{figure}
+}
+
+
+
 
 \def\ergo{\Rightarrow} %silly stuff for me
 
