cool reference now

--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -313,3 +313,14 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     doiurl  ={https://doi.org/10.1039/C6CC09952A},
     doi = {10.1039/C6CC09952A},
 }
+
+@article{graphite,
+    author = {Stefan Hembacher  and Franz J. Giessibl  and Jochen Mannhart  and Calvin F. Quate },
+    title = {Revealing the hidden atom in graphite by low-temperature atomic force microscopy},
+    journal = {Proceedings of the National Academy of Sciences},
+    volume = {100},
+    number = {22},
+    pages = {12539-12542},
+    year = {2003},
+    doiurl = {https://doi.org/10.1073/pnas.2134173100},
+}
