--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -1,10 +1,10 @@
 \chapter{Highly Ordered Pyrolitic Graphite (HOPG)}
 
-Highly Ordered Pyrolitic Graphite (HOPG) ist ein Kristall, bestehend aus Schichten von jeweils hexagonal angeordneten Kohlenstoffatomen. Die Schichten sind zueinander verschoben, so dass jeweils die Hälfte der Kohlenstoffatome über solchen aus der nächsten Lage liegen und die andere Hälfte über entsprechenden Hohlstellen. Dies ist skizziert in Abbildung \ref{fig:graphit_gitter} \todo{maybe cite this}.
+Highly Ordered Pyrolitic Graphite (HOPG) ist ein Kristall, bestehend aus Schichten von jeweils hexagonal angeordneten Kohlenstoffatomen. Die Schichten sind zueinander verschoben, sodass jeweils die Hälfte der Kohlenstoffatome über solchen aus der nächsten Lage liegen und die andere Hälfte über entsprechenden Hohlstellen \cite{graphite}. Dies ist skizziert in Abbildung \ref{fig:graphit_gitter}.
 
 \jafps{graphit_gitter}{Schematische Darstellung der Kristallstruktur von HOPG\cite{hopg_sketch}}{0.4}
 
-Die Schichten zueinander sind nur schwach über Van-der-Vaals Kräfte gebunden, innerhalb der Brücken sind die Kohlenstoffatome kovalent, also deutlich stärker gebunden \todo{cite}. Dies wird beim Vorbereiten der Probe ausgenutzt, da es erlaubt, ganze Schichten relativ leicht abzulösen während diese jeweils intakt bleiben.
+Die Schichten zueinander sind nur schwach über Van-der-Vaals Kräfte gebunden, innerhalb der Brücken sind die Kohlenstoffatome kovalent, also deutlich stärker gebunden \cite{graphite}. Dies wird beim Vorbereiten der Probe ausgenutzt, da es erlaubt, ganze Schichten relativ leicht abzulösen während diese jeweils intakt bleiben.
 
 Die Verschiebung der Schichten zueinander führt dazu, dass jedes zweite Elektron an die darunterliegende Schicht gebunden ist, während die übrigen keine Bindung zu dieser haben. Dies führt durch nach unten verschobene Elektronenorbitale, der an die untere Schicht gebundenen Elektronen, dafür, dass diese Elektronen weit weniger über den Tunneleffekt im RTM messbar sind. Infolgedessen wird mit dem RTM nur jedes zweite Elektron gemessen. Diese haben dann in der Aufnahme einen Abstand von $d = \SI{0.246}{\nano\meter}$ und lassen sich so als gleichseitige Dreiecke beobachten \cite[13]{Versuchsanleitung422}.
 
@@ -15,19 +15,19 @@ Die HOPG Probe wird zunächst unter dem USB Mikroskop dokumentiert (siehe Abbild
 
 \jafps{hopg_scaled}{USB-Mikroskop Aufnahme der genutzten HOPG Probe.}{0.4}
 
-Anschließend wird die Probe vorbereitet inmdem ein Stück Klebeband-Film auf die Probe geklebt und dann abgezogen wurde. Dies sorgt dafür, dass eine frische, unverschmutzte und näherungsweise ebene Graphitschicht freigelegt wird.
+Anschließend wird die Probe vorbereitet indem ein Stück Klebeband-Film auf die Probe geklebt und dann abgezogen wurde. Dies sorgt dafür, dass eine frische, unverschmutzte und näherungsweise ebene Graphitschicht freigelegt wird.
 Es wird zunächst im CCM ein $\SI{200}{\nano\meter} \times \SI{200}{\nano\meter}$ RTM-Bild \ref{fig:res/hopg_131} aufgenommen und eine geeignete flache Stelle gesucht.
 \jafps{res/hopg_131}{Übersichtsaufnahme der Graphitoberfläche im konstanten Strom Modus $v_R = \SI{1000.0}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
 
 
-In der unteren linken Hälfte der Aufnahme \ref{fig:res/hopg_131} findet sich eine Stufe, ansonsten wird die Oberfläche als eben identifiziert. Es wird im weiteren ein Ausschnitt in der rechten oberen Hälfte von Abbildung \ref{fig:res/hopg_131} genutzt. Schrittweise wird der Ausschnitt verkleinert und im CCM die Glätte des Ausschnitts verifiziert. Bei einer Größe von $\SI{4}{\nano\meter} \times \SI{4}{\nano\meter}$ wird anschließend auf den konstanten Höhen Modus (CHM) gewechselt, in dem die Konstante P auf 0 und I auf 4 gesetzt werden.
+In der unteren linken Hälfte der Aufnahme \ref{fig:res/hopg_131} findet sich eine Stufe, ansonsten wird die Oberfläche als eben identifiziert. Es wird im weiteren ein Ausschnitt in der rechten oberen Hälfte von Abbildung \ref{fig:res/hopg_131} genutzt. Schrittweise wird der Ausschnitt verkleinert und im CCM die Glätte des Ausschnitts verifiziert. Bei einer Größe von $\SI{4}{\nano\meter} \times \SI{4}{\nano\meter}$ wird anschließend auf den konstanten Höhen-Modus (CHM) gewechselt, in dem die Konstante P auf 0 und I auf 4 gesetzt werden.
 
 Nun werden Aufnahmen mit atomarer Auflösung hergestellt (siehe \ref{fig:res/hopg_166_with_lines}).
 
 \section{Auswertung}
 
 
-In den Aufnahmen erwarten wir entsprechend Abbildung \ref{fig:graphit_gitter}, ein Muster gleichseitiger Dreiecke mit Seitenlänge $\SI{0.246}{\nano\meter}$. Eine gelungene Aufnahme wird nun genutzt um dort den Abstand mehrerer Maxima zueinander zu vermessen. Hierzu wurde die Mess-Funktionalität von gwyddion \cite{gwyddion} verwendet.
+In den Aufnahmen erwarten wir entsprechend Abbildung \ref{fig:graphit_gitter}, ein Muster gleichseitiger Dreiecke mit Seitenlänge $\SI{0.246}{\nano\meter}$ \cite{graphite}. Eine gelungene Aufnahme wird nun genutzt um dort den Abstand mehrerer Maxima zueinander zu vermessen. Hierzu wurde die Mess-Funktionalität von gwyddion \cite{gwyddion} verwendet.
 
 % \jafps{res/hopg_166}{\todo{scanspeed}}{0.4}
 \jafps{res/hopg_166_with_lines}{Messung des HOPG mit Messlinien zur Bestimmung des Kristallgitters. $v_R = \SI{157.20}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{751}{\nano\ampere}$, $P=0$, $I=4$}{0.4}
