--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -187,7 +187,7 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
 }
 
 @article{binnigSTM,
-    author = {G. Binnig, H. Rohrer},
+    author = {G. Binnig and H. Rohrer},
     title = {Scanning tunneling microscopy},
     journal = {Surface Science},
     volume = {126},
@@ -275,7 +275,7 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
 }
 
 @misc{gwyddion,
-    title = {Gwyddion},
+    title = {gwyddion},
     url = {https://gwyddion.net/},
     note = {Open Source Software},
     version = {2.69},
