stm_scheme added

--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -43,6 +43,8 @@ Dieser Zusammenhang ist näherungsweise linear;
 Dieser Effekt ist in der Größenordnung von $10^{-11} - 10^{-9} \unit{\meter\per\volt}$ und erlaubt somit relativ einfach Positionsregelung auf atomaren Größenskalen. \cite[339-341]{gerthsen}
 
 
+\input{skizze_rtm.tikz}
+
 \subsection{Regelkreis}
 Der Abstand der Spitze über der Probe muss geregelt werden, damit der Abstand stets klein genug ist, damit ein messbarer Tunnelstrom fließt ohne jedoch die Probe zu berühren und so potentiell die Spitze zu zerstören.
 
