--- a/422-raster-tunnel-mikroskopie/latex/template.tex
+++ b/422-raster-tunnel-mikroskopie/latex/template.tex
@@ -23,7 +23,7 @@
 	output-decimal-marker = {,}
 }
 
-%\usepackage{ circuitikz }
+\usepackage{ circuitikz }
 
 \usepackage[backend=biber, style=numeric]{biblatex} % do not change this, the whole thing will break
 % \usepackage{bibtex}
